--- a/config_files/weather.conf
+++ b/config_files/weather.conf
@@ -1,4 +1,10 @@
-# /etc/nginx/sites-available/weather.conf                                         
+# /etc/nginx/sites-available/weather.conf
+
+# raspberry pi IP at school : 10.24.99.191
+# raspberry pi IP at home : 192.168.1.8
+
+# http://10.24.99.191/cgi-bin/getData.cgi
+
 server {
     listen   10.24.99.191:80;
     server_name  localhost;
